--- a/src/pages/services.html
+++ b/src/pages/services.html
@@ -11,27 +11,123 @@ breadcrumb: Mr. Fix It Home Improvement Services
   </div>
 </div>
 
-<h2>Services Page</h2>
+<div class="wrapper services-page">
+  <h2>Home Rennovations By People You Can Trust</h2>
 
-<h2>Home Rennovations By People You Can Trust</h2>
+  <p>
+    Mr. Fix- It Home Improvements, Inc. is proud to offer our the same
+    professionalism and quality of work for general home repairs. We will use
+    the same cleanliness and craftsmanship in our other service offerings to
+    repair projects around your home.
+  </p>
 
-<p>
-  Mr. Fix- It Home Improvements, Inc. is proud to offer our the same
-  professionalism and quality of work for general home repairs. We will use the
-  same cleanliness and craftsmanship in our other service offerings to repair
-  projects around your home. Some of the services we are able to provide are:
-</p>
+  <p>Some of the services we are able to provide are:</p>
 
-ROOM ADDITIONS PAINTING ELECTRICAL REPAIRS PRESSURE WASHING PLUMBING REPAIRS
-TILE REPAIRS HARDWOOD FLOORING CROWN MOULDING GARAGE BUILDOUT DRYWALL REPAIRS
-SKYLIGHTS ROOFING NEW AND REPLACEMENT WINDOWS PRE-HUNG DOOR UNITS BASEMENT
-REMODELING
+  <div class="services-box">
+    <ul class="service-box">
+      <li>Room Additions</li>
+      <li>Painting</li>
+      <li>Electrical Repairs</li>
+      <li>Pressure Washing</li>
+      <li>Plumbing Repairs</li>
+    </ul>
 
-<ul>
-  <li><a href="bathroom-remodeling.html">Bathroom Remodeling</a></li>
-  <li>Kitchen Remodeling</li>
-  <li>Decks</li>
-  <li>Flooring</li>
-  <li>Screen Porches</li>
-  <li>Additions & More</li>
-</ul>
+    <ul class="service-box">
+      <li>Tile Repairs</li>
+      <li>Hardwood Flooring</li>
+      <li>Crown Moulding</li>
+      <li>Garage Buildout</li>
+      <li>Drywall Repairs</li>
+    </ul>
+
+    <ul class="service-box">
+      <li>Skylights</li>
+      <li>Roofing</li>
+      <li>New and Replacement Windows</li>
+      <li>Pre-Hung Door Units</li>
+      <li>Basement Remodeling</li>
+    </ul>
+
+    <div class="content">
+      <a href="bathroom-remodeling.html" target="_blank">
+        <div class="content-overlay"></div>
+        <img
+          class="content-image"
+          src="assets/img/Features/400_bathroomfesature.jpg"
+        />
+        <div class="content-details fadeIn-bottom">
+          <h3 class="content-title">Bathroom Remodeling</h3>
+          <p class="content-text">Design, Plumbing and Tilework</p>
+        </div>
+      </a>
+    </div>
+
+    <div class="content">
+      <a href="kitchen-remodeling.html" target="_blank">
+        <div class="content-overlay"></div>
+        <img
+          class="content-image"
+          src="assets/img/Features/400_kitchenfeature.jpg"
+        />
+        <div class="content-details fadeIn-bottom">
+          <h3 class="content-title">Kitchens</h3>
+          <p class="content-text">Cabinetry, Flooring and Installations</p>
+        </div>
+      </a>
+    </div>
+
+    <div class="content">
+      <a href="outdoor-remodeling.html" target="_blank">
+        <div class="content-overlay"></div>
+        <img
+          class="content-image"
+          src="assets/img/Features/400_featuredeck.jpg"
+        />
+        <div class="content-details fadeIn-bottom">
+          <h3 class="content-title">Decks</h3>
+          <p class="content-text">Custom designs with long-lasting solutions</p>
+          <!-- div class="hollow button">Click for More.</div> -->
+        </div>
+      </a>
+    </div>
+
+    <div class="content">
+      <a href="outdoor-remodeling.html" target="_blank">
+        <div class="content-overlay"></div>
+        <img class="content-image" src="assets/img/Features/400_flooring.jpg" />
+        <div class="content-details fadeIn-bottom">
+          <h3 class="content-title">Flooring</h3>
+          <p class="content-text">Hardood, Tile and Linoleum Experts</p>
+        </div>
+      </a>
+    </div>
+
+    <div class="content">
+      <a href="outdoor-remodeling.html" target="_blank">
+        <div class="content-overlay"></div>
+        <img
+          class="content-image"
+          src="assets/img/Features/400_feature_patioroom.jpg"
+        />
+        <div class="content-details fadeIn-bottom">
+          <h3 class="content-title">Patio Rooms</h3>
+          <p class="content-text">Screen Porches, Sunrooms and Arbors</p>
+        </div>
+      </a>
+    </div>
+
+    <div class="content">
+      <a href="home-remodeling.html" target="_blank">
+        <div class="content-overlay"></div>
+        <img
+          class="content-image"
+          src="assets/img/Features/400_roomaddition_feature.jpg"
+        />
+        <div class="content-details fadeIn-bottom">
+          <h3 class="content-title">Additions & More</h3>
+          <p class="content-text">Garage, Carport, Sunrooms</p>
+        </div>
+      </a>
+    </div>
+  </div>
+</div>
