--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,1 +1,16 @@
+---
+slogan: Mr. Fix It As A Full Service Remodeling Contractor
+title: Kingsport, Johnson City, Bristol - Bathroom, Kitchen, Deck and Home Remodeling
+---
+
 {{> home-slider}}
+
+{{> home-services}}
+
+<h2 class="slogan">{{ slogan }}</h2>
+
+<!-- Separator Image -->
+
+<div class="separator-image pool-image"></div>
+
+{{> home-form}}
