--- a/src/pages/contactus.html
+++ b/src/pages/contactus.html
@@ -24,12 +24,14 @@ breadcrumb: Contact Us
 
     <div class="contact-address">
       <h2>Mr. Fix It Home Improvements</h2>
-      <p>209 Sand Street, Kingsport, TN 37660 <br />Call 1-423-530-6010</p>
+      <h3>209 Sand Street, Kingsport, TN 37660 <br />Call 1-423-530-6010</h3>
       <hr />
-      <img
-        src="assets/img/graphics/facebooklike.png"
-        alt="Like us on Facebook"
-      />
+      <a href="http://www.facebook.com/mrfixithomes">
+        <img
+          src="assets/img/graphics/facebooklike.png"
+          alt="Like us on Facebook"
+        />
+      </a>
     </div>
   </div>
 
