--- a/src/pages/deck_projects/08162019_LakeView_Deck.html
+++ b/src/pages/deck_projects/08162019_LakeView_Deck.html
@@ -1,3 +1,15 @@
+---
+testimonial: When we started to look for contractors, we were worried about people being inside our house. Mr. Fix It and their entire crew made us feel comfortable and relaxed through the whole process. They were clean, professional and we couldn't be happier.
+name: Annette
+city: Cooks Valley- Kingsport, TN
+breadcrumb: Chestnut Ridge Kitchen and Flooring
+header: Cooks Valley - Chestnut Ridge, Kingsport, TN
+headline: Black and tan accents highlight this new kitchen and flooring
+summary: Kitchen and Tile Flooring
+completion: Completed February 2017
+path: ../assets/img/Projects/Kitchens/012017_CooksValley_Kitchen_Bath/
+---
+
 <div class="crumbcontainer">
   <div class="breadcrumb-box">
     <div class="breadcrumb">
